test/assets/invalid/application/remove-last-param.hs
a = fmap (+ 1) [1, 2, 3] 1
